--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,56 @@
   <title>Thruster Diagnostics Visualization</title>
   <script src="../lib/jquery-3.6.0.min.js"></script>
   <script src="../lib/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
   <script src="js/script.js"></script>
 </head>
+
 <body>
-  <p>Placeholder0</p>
+  <main>
+    <div class="container text-dark">
+      <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center main-top">
+        <p class="display-3 fw-bold text-light">Hall Thruster Diagnostics</p>
+        <p class="fs-4 text-light">Perfecting the Thrusters for Psyche </p>
+      </div>
+      <div class="col-lg-8 mx-auto p-3 py-md-4">
+        <div class="">
+          <p class="h2">Overview</p>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent facilisis euismod egestas. Ut nec lacus pretium sem tincidunt interdum. Sed sit amet condimentum est, vitae malesuada ante. Nullam sit amet purus vel risus commodo maximus. Mauris feugiat justo et quam fermentum iaculis. Cras lacinia pretium elementum. Suspendisse blandit, tellus vel condimentum mollis, ex risus feugiat risus, et vehicula quam sapien a urna. Donec vel dolor molestie, laoreet felis tincidunt, molestie orci. Duis luctus tortor ut purus viverra accumsan. In hac habitasse platea dictumst.
+          </p>
+          <hr class=""/>
+          <p class="h2">Faraday Probes</p>
+          <p class="lead">
+            Sed at blandit eros. Donec erat diam, commodo et dui a, placerat consectetur lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec rhoncus volutpat convallis. Pellentesque molestie posuere lorem id tempus. In vel lorem sollicitudin, venenatis metus eu, tempus urna. Phasellus scelerisque porta mauris, nec gravida erat volutpat quis. Morbi bibendum sit amet libero vitae posuere. Aenean justo enim, molestie id ex et, consequat gravida lorem. Maecenas placerat neque vel consectetur ullamcorper. Proin a lectus id dui rhoncus ullamcorper eu semper quam. Vivamus ligula nisi, porttitor nec lectus vel, tincidunt efficitur lectus. Aenean lorem lectus, consequat eu mattis ac, tempor vitae lectus. Etiam arcu enim, placerat sed hendrerit et, aliquam eget nunc. Vivamus a quam a metus maximus lobortis. Aenean laoreet augue sit amet elementum fringilla.
+          </p>
+          <div class="row justify-content-end">
+            <div class="col-4">
+              <a href="" class="btn btn-light learning-btn">Continue Learning
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
+                  <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
+                </svg>
+              </a>
+            </div>
+          </div>
+          <hr class=""/>
+          <p class="h2">Retarding Potential Analyzer</p>
+          <p class="lead">
+            Ut ac pellentesque velit. Praesent et felis sit amet nisi blandit semper tempor eu nunc. Vivamus nec justo dolor. Vivamus non nulla condimentum risus posuere accumsan. Morbi porttitor mauris in orci euismod molestie. Nunc rutrum ultricies est facilisis semper. Donec nibh mi, scelerisque id efficitur sed, pretium non magna. Morbi non magna et orci lobortis molestie. Duis pellentesque lectus ut ligula eleifend, eget dignissim libero tempor. In odio nulla, sodales a nulla id, ultricies tristique quam. Ut finibus sed justo non hendrerit. Nunc ut ligula nulla. Pellentesque faucibus dui sed iaculis mattis.
+          </p>
+          <div class="row justify-content-end">
+            <div class="col-4">
+              <a href="" class="btn btn-light learning-btn">Continue Learning
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
+                  <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
