initial creation of faraday page
added some images from the slides from slack, plus formatted the page to make it look like the home page. will add info and some other stylistic changes later once we get there

--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,27 @@
   <script src="../lib/jquery-3.6.0.min.js"></script>
   <script src="../lib/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/styles.css" />
   <script src="js/script.js"></script>
 </head>
+
 <body>
-  <p>Placeholder1</p>
+  <div class="container text-dark">
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center main-top">
+      <p class="display-3 fw-bold text-light">Hall Thruster Diagnostics</p>
+      <p class="fs-4 text-light">Perfecting the Thrusters for Psyche </p>
+    </div>
+    <div class="col-lg-8 mx-auto p-3 py-md-4">
+      <p class="h2">Faraday Probes</p>
+      <p class="lead">
+        Sed at blandit eros. Donec erat diam, commodo et dui a, placerat consectetur lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec rhoncus volutpat convallis. Pellentesque molestie posuere lorem id tempus. In vel lorem sollicitudin, venenatis metus eu, tempus urna. Phasellus scelerisque porta mauris, nec gravida erat volutpat quis. Morbi bibendum sit amet libero vitae posuere. Aenean justo enim, molestie id ex et, consequat gravida lorem. Maecenas placerat neque vel consectetur ullamcorper. Proin a lectus id dui rhoncus ullamcorper eu semper quam. Vivamus ligula nisi, porttitor nec lectus vel, tincidunt efficitur lectus. Aenean lorem lectus, consequat eu mattis ac, tempor vitae lectus. Etiam arcu enim, placerat sed hendrerit et, aliquam eget nunc. Vivamus a quam a metus maximus lobortis. Aenean laoreet augue sit amet elementum fringilla.
+      </p>
+    </div>
+    <div>
+      <center>
+        <img src="../img/faraday_probe/Faraday_Probe.png"/>
+      </center>
+    </div>
+  </div>
 </body>
 </html>
