--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -27,8 +27,33 @@
     </div>
     <div>
       <center>
-        <img src="../img/faraday_probe/Faraday_Probe.png"/>
+        <figure>
+          <img src="../img/faraday_probe/Faraday_Probe.png"/>
+          <figcaption>Faraday Probe. Coin for scale.</figcaption>
+        </figure>
       </center>
+    </div>
+    <div class="col-lg-8 mx-auto p-3 py-md-4">
+      <p class="h3">How it works</p>
+      <p class="lead">
+        Ut ac pellentesque velit. Praesent et felis sit amet nisi blandit semper tempor eu nunc. Vivamus nec justo dolor. Vivamus non nulla condimentum risus posuere accumsan. Morbi porttitor mauris in orci euismod molestie. Nunc rutrum ultricies est facilisis semper. Donec nibh mi, scelerisque id efficitur sed, pretium non magna. Morbi non magna et orci lobortis molestie. Duis pellentesque lectus ut ligula eleifend, eget dignissim libero tempor. In odio nulla, sodales a nulla id, ultricies tristique quam. Ut finibus sed justo non hendrerit. Nunc ut ligula nulla. Pellentesque faucibus dui sed iaculis mattis.
+      </p>
+      <center>
+        <figure>
+          <img src="../img/faraday_probe/Probe_Diagram.png"/>
+        </figure>
+      </center>
+      <!-- Below is the information taken from the slides regarding the Faraday Probe.
+           Will change this later to make it more suitable for the webpage-->
+      <p>
+        What it measures: The ion current density distribution (i.e., how many ions there are at a given location)
+      </p>
+      <p>
+        What it is: A flat metal disk (“collector”) housed inside a metal cylinder (“guard”)
+      </p>
+      <p>
+        How it works: The collector and guard are biased negatively and swept in an arc through the plume. The collector current is measured as a function of position (higher current = more ions)
+      </p>
     </div>
   </div>
 </body>
