--- a/views/home.html
+++ b/views/home.html
@@ -28,10 +28,10 @@
             <a class="nav-link active" aria-current="page" href="#">Overview</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Faraday Probes</a>
+            <a class="nav-link" href="./Faraday_probe.html">Faraday Probes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">RPA Diagnostics</a>
+            <a class="nav-link" href="./retarding_analyzer.html">RPA Diagnostics</a>
           </li>
         </ul>
       </div>
