--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse " id="navbarTop">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Overview</a>
+            <a class="nav-link active" aria-current="page" href="./home.html">Overview</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Faraday_probe.html">Faraday Probes</a>
