--- a/views/home.html
+++ b/views/home.html
@@ -48,7 +48,10 @@
         <div class="">
           <p class="h2">Overview</p>
           <p class="lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent facilisis euismod egestas. Ut nec lacus pretium sem tincidunt interdum. Sed sit amet condimentum est, vitae malesuada ante. Nullam sit amet purus vel risus commodo maximus. Mauris feugiat justo et quam fermentum iaculis. Cras lacinia pretium elementum. Suspendisse blandit, tellus vel condimentum mollis, ex risus feugiat risus, et vehicula quam sapien a urna. Donec vel dolor molestie, laoreet felis tincidunt, molestie orci. Duis luctus tortor ut purus viverra accumsan. In hac habitasse platea dictumst.
+            When the Psyche Mission launches in 2022, it will be the first time humankind will be visiting an entirely metal asteroid. But how will we get there? The Psyche Mission is equipped with electronic
+            Hall Thrusters which will be used as the main propulsion system once it has left our atmosphere! Since there will be no chance to test the thrusters in space, different diagnostic tests have been
+            devised on Earth to analyze how the thrusters will perform in space. There are two important diagnostic tests for the thrusters to pass, the Faraday Probe Diagnostics and the Retards Potential
+            Analyzer Diagnostics.
           </p>
           <hr class=""/>
           <p class="h2">Faraday Probes</p>
@@ -57,7 +60,7 @@
           </p>
           <div class="row justify-content-end">
             <div class="col-4">
-              <a href="" class="btn btn-light learning-btn">Continue Learning
+              <a href="./Faraday_probe.html" class="btn btn-light learning-btn">Continue Learning
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
                   <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
                 </svg>
@@ -71,7 +74,7 @@
           </p>
           <div class="row justify-content-end">
             <div class="col-4">
-              <a href="" class="btn btn-light learning-btn">Continue Learning
+              <a href="./retarding_analyzer.html" class="btn btn-light learning-btn">Continue Learning
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
                   <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
                 </svg>
@@ -82,6 +85,19 @@
       </div>
     </div>
   </main>
+
+  <footer class="container-xl">
+    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-muted">Placeholder</p>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted">More on Psyche</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">References</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Our Team</a></li>
+      </ul>
+    </div>
+  </footer>
+
 </body>
 
 </html>
