--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -8,7 +8,7 @@
   <title>Thruster Diagnostics Visualization</title>
   <script src="../lib/jquery-3.6.0.min.js"></script>
   <script src="../lib/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css" />
   <link rel="stylesheet" href="../css/styles.css" />
   <script src="../js/script.js"></script>
 </head>
@@ -25,10 +25,10 @@
       <div class="collapse navbar-collapse " id="navbarTop">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./home.html">Overview</a>
+            <a class="nav-link" aria-current="page" href="./home.html">Overview</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Faraday_probe.html">Faraday Probes</a>
+            <a class="nav-link active" href="./Faraday_probe.html">Faraday Probes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./retarding_analyzer.html">RPA Diagnostics</a>
@@ -37,47 +37,62 @@
       </div>
     </div>
   </nav>
-  <div class="container text-dark">
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center main-top">
-      <p class="display-3 fw-bold text-light">Hall Thruster Diagnostics</p>
-      <p class="fs-4 text-light">Perfecting the Thrusters for Psyche </p>
+
+  <main class="container">
+    <div class="text-dark">
+      <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center main-top">
+        <p class="display-3 fw-bold text-light">Hall Thruster Diagnostics</p>
+        <p class="fs-4 text-light">Perfecting the Thrusters for Psyche </p>
+      </div>
+      <div class="col-lg-8 mx-auto p-3 py-md-4">
+        <p class="h2">Faraday Probes</p>
+        <p class="lead">
+          Sed at blandit eros. Donec erat diam, commodo et dui a, placerat consectetur lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec rhoncus volutpat convallis. Pellentesque molestie posuere lorem id tempus. In vel lorem sollicitudin, venenatis metus eu, tempus urna. Phasellus scelerisque porta mauris, nec gravida erat volutpat quis. Morbi bibendum sit amet libero vitae posuere. Aenean justo enim, molestie id ex et, consequat gravida lorem. Maecenas placerat neque vel consectetur ullamcorper. Proin a lectus id dui rhoncus ullamcorper eu semper quam. Vivamus ligula nisi, porttitor nec lectus vel, tincidunt efficitur lectus. Aenean lorem lectus, consequat eu mattis ac, tempor vitae lectus. Etiam arcu enim, placerat sed hendrerit et, aliquam eget nunc. Vivamus a quam a metus maximus lobortis. Aenean laoreet augue sit amet elementum fringilla.
+        </p>
+      </div>
+      <div>
+        <center>
+          <figure>
+            <img src="../img/faraday_probe/Faraday_Probe.png"/>
+            <figcaption>Faraday Probe. Coin for scale.</figcaption>
+          </figure>
+        </center>
+      </div>
+      <div class="col-lg-8 mx-auto p-3 py-md-4">
+        <p class="h3">How it works</p>
+        <p class="lead">
+          Ut ac pellentesque velit. Praesent et felis sit amet nisi blandit semper tempor eu nunc. Vivamus nec justo dolor. Vivamus non nulla condimentum risus posuere accumsan. Morbi porttitor mauris in orci euismod molestie. Nunc rutrum ultricies est facilisis semper. Donec nibh mi, scelerisque id efficitur sed, pretium non magna. Morbi non magna et orci lobortis molestie. Duis pellentesque lectus ut ligula eleifend, eget dignissim libero tempor. In odio nulla, sodales a nulla id, ultricies tristique quam. Ut finibus sed justo non hendrerit. Nunc ut ligula nulla. Pellentesque faucibus dui sed iaculis mattis.
+        </p>
+        <center>
+          <figure>
+            <img src="../img/faraday_probe/Probe_Diagram.png"/>
+          </figure>
+        </center>
+        <!-- Below is the information taken from the slides regarding the Faraday Probe.
+             Will change this later to make it more suitable for the webpage-->
+        <p>
+          What it measures: The ion current density distribution (i.e., how many ions there are at a given location)
+        </p>
+        <p>
+          What it is: A flat metal disk (“collector”) housed inside a metal cylinder (“guard”)
+        </p>
+        <p>
+          How it works: The collector and guard are biased negatively and swept in an arc through the plume. The collector current is measured as a function of position (higher current = more ions)
+        </p>
+      </div>
     </div>
-    <div class="col-lg-8 mx-auto p-3 py-md-4">
-      <p class="h2">Faraday Probes</p>
-      <p class="lead">
-        Sed at blandit eros. Donec erat diam, commodo et dui a, placerat consectetur lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec rhoncus volutpat convallis. Pellentesque molestie posuere lorem id tempus. In vel lorem sollicitudin, venenatis metus eu, tempus urna. Phasellus scelerisque porta mauris, nec gravida erat volutpat quis. Morbi bibendum sit amet libero vitae posuere. Aenean justo enim, molestie id ex et, consequat gravida lorem. Maecenas placerat neque vel consectetur ullamcorper. Proin a lectus id dui rhoncus ullamcorper eu semper quam. Vivamus ligula nisi, porttitor nec lectus vel, tincidunt efficitur lectus. Aenean lorem lectus, consequat eu mattis ac, tempor vitae lectus. Etiam arcu enim, placerat sed hendrerit et, aliquam eget nunc. Vivamus a quam a metus maximus lobortis. Aenean laoreet augue sit amet elementum fringilla.
-      </p>
+  </main>
+
+  <footer class="container-xl">
+    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-muted">Placeholder</p>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted">More on Psyche</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">References</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Our Team</a></li>
+      </ul>
     </div>
-    <div>
-      <center>
-        <figure>
-          <img src="../img/faraday_probe/Faraday_Probe.png"/>
-          <figcaption>Faraday Probe. Coin for scale.</figcaption>
-        </figure>
-      </center>
-    </div>
-    <div class="col-lg-8 mx-auto p-3 py-md-4">
-      <p class="h3">How it works</p>
-      <p class="lead">
-        Ut ac pellentesque velit. Praesent et felis sit amet nisi blandit semper tempor eu nunc. Vivamus nec justo dolor. Vivamus non nulla condimentum risus posuere accumsan. Morbi porttitor mauris in orci euismod molestie. Nunc rutrum ultricies est facilisis semper. Donec nibh mi, scelerisque id efficitur sed, pretium non magna. Morbi non magna et orci lobortis molestie. Duis pellentesque lectus ut ligula eleifend, eget dignissim libero tempor. In odio nulla, sodales a nulla id, ultricies tristique quam. Ut finibus sed justo non hendrerit. Nunc ut ligula nulla. Pellentesque faucibus dui sed iaculis mattis.
-      </p>
-      <center>
-        <figure>
-          <img src="../img/faraday_probe/Probe_Diagram.png"/>
-        </figure>
-      </center>
-      <!-- Below is the information taken from the slides regarding the Faraday Probe.
-           Will change this later to make it more suitable for the webpage-->
-      <p>
-        What it measures: The ion current density distribution (i.e., how many ions there are at a given location)
-      </p>
-      <p>
-        What it is: A flat metal disk (“collector”) housed inside a metal cylinder (“guard”)
-      </p>
-      <p>
-        How it works: The collector and guard are biased negatively and swept in an arc through the plume. The collector current is measured as a function of position (higher current = more ions)
-      </p>
-    </div>
-  </div>
+  </footer>
 </body>
 </html>
