--- a/views/retarding_analyzer.html
+++ b/views/retarding_analyzer.html
@@ -24,13 +24,13 @@
       <div class="collapse navbar-collapse " id="navbarTop">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./home.html">Overview</a>
+            <a class="nav-link" aria-current="page" href="./home.html">Overview</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Faraday_probe.html">Faraday Probes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./retarding_analyzer.html">RPA Diagnostics</a>
+            <a class="nav-link active" href="./retarding_analyzer.html">RPA Diagnostics</a>
           </li>
         </ul>
       </div>
@@ -48,5 +48,17 @@
         Sed at blandit eros. Donec erat diam, commodo et dui a, placerat consectetur lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec rhoncus volutpat convallis. Pellentesque molestie posuere lorem id tempus. In vel lorem sollicitudin, venenatis metus eu, tempus urna. Phasellus scelerisque porta mauris, nec gravida erat volutpat quis. Morbi bibendum sit amet libero vitae posuere. Aenean justo enim, molestie id ex et, consequat gravida lorem. Maecenas placerat neque vel consectetur ullamcorper. Proin a lectus id dui rhoncus ullamcorper eu semper quam. Vivamus ligula nisi, porttitor nec lectus vel, tincidunt efficitur lectus. Aenean lorem lectus, consequat eu mattis ac, tempor vitae lectus. Etiam arcu enim, placerat sed hendrerit et, aliquam eget nunc. Vivamus a quam a metus maximus lobortis. Aenean laoreet augue sit amet elementum fringilla.
       </p>
     </div>
+
+    <footer class="container-xl">
+      <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <p class="col-md-4 mb-0 text-muted">Placeholder</p>
+
+        <ul class="nav col-md-4 justify-content-end">
+          <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted">More on Psyche</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">References</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Our Team</a></li>
+        </ul>
+      </div>
+    </footer>
 </body>
 </html>
