--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white border-bottom" aria-label="TopNavbar">
     <div class="container-xl">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./home.html">
         <img src="../img/logo/Psyche_Icon_BW-SVG.svg" alt="" width="45" height="45" class="d-inline-block"> Hall Thruster Diagnostics
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTop" aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
