verify working links

--- a/views/retarding_analyzer.html
+++ b/views/retarding_analyzer.html
@@ -27,7 +27,7 @@
             <a class="nav-link" aria-current="page" href="./home.html">Overview</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Faraday_probe.html">Faraday Probes</a>
+            <a class="nav-link" href="./faraday_probe.html">Faraday Probes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="./retarding_analyzer.html">RPA Diagnostics</a>
