--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -28,7 +28,7 @@
             <a class="nav-link" aria-current="page" href="./home.html">Overview</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./Faraday_probe.html">Faraday Probes</a>
+            <a class="nav-link active" href="./faraday_probe.html">Faraday Probes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./retarding_analyzer.html">RPA Diagnostics</a>
