mobile-friendly image resizing

--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -53,7 +53,7 @@
       <div>
         <center>
           <figure>
-            <img src="../img/faraday_probe/Faraday_Probe.png"/>
+            <img class="image" src="../img/faraday_probe/Faraday_Probe.png"/>
             <figcaption>Faraday Probe. Coin for scale.</figcaption>
           </figure>
         </center>
@@ -65,7 +65,7 @@
         </p>
         <center>
           <figure>
-            <img src="../img/faraday_probe/Probe_Diagram.png"/>
+            <img class="image" src="../img/faraday_probe/Probe_Diagram.png"/>
           </figure>
         </center>
         <!-- Below is the information taken from the slides regarding the Faraday Probe.
