--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* Placeholder */
 .main-top {
   background-image: url('../img/home/Psyche-Spacecraft.jpg');
   background-position: center;
@@ -11,4 +10,8 @@
 
 .nav-link:hover {
   background-color: #0dcaf0;
+}
+
+.image {
+  width: 50%;
 }
