--- a/views/home.html
+++ b/views/home.html
@@ -56,17 +56,21 @@
           <hr class=""/>
           <p class="h2">Faraday Probes</p>
           <p class="lead">
-            Sed at blandit eros. Donec erat diam, commodo et dui a, placerat consectetur lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec rhoncus volutpat convallis. Pellentesque molestie posuere lorem id tempus. In vel lorem sollicitudin, venenatis metus eu, tempus urna. Phasellus scelerisque porta mauris, nec gravida erat volutpat quis. Morbi bibendum sit amet libero vitae posuere. Aenean justo enim, molestie id ex et, consequat gravida lorem. Maecenas placerat neque vel consectetur ullamcorper. Proin a lectus id dui rhoncus ullamcorper eu semper quam. Vivamus ligula nisi, porttitor nec lectus vel, tincidunt efficitur lectus. Aenean lorem lectus, consequat eu mattis ac, tempor vitae lectus. Etiam arcu enim, placerat sed hendrerit et, aliquam eget nunc. Vivamus a quam a metus maximus lobortis. Aenean laoreet augue sit amet elementum fringilla.
+            A faraday probe is a small cylindrical shaped object that can be used to determine the local ion charge of electric propulsion plumes.
           </p>
+          <div class="rocket">
+            <img src="../img/rocket.svg">
+          </div>
           <div class="row justify-content-end">
             <div class="col-4">
-              <a href="./Faraday_probe.html" class="btn btn-light learning-btn">Continue Learning
+              <a href="./faraday_probe.html" class="btn btn-light learning-btn">Continue Learning
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
                   <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
                 </svg>
               </a>
             </div>
           </div>
+
           <hr class=""/>
           <p class="h2">Retarding Potential Analyzer</p>
           <p class="lead">
