--- a/views/home.html
+++ b/views/home.html
@@ -57,7 +57,7 @@
             Hall Thrusters which will be used as the main propulsion system once it has left our atmosphere! Since there will be no chance to test the thrusters in space, different diagnostic tests have been
             devised on Earth to analyze how the thrusters will perform in space. The thrusters exhaust a plume of plasma and ions in order to propel the spacecraft. The ions within this plume are hotter than
             10,000°F and are travelling faster than 20,000 MPH. Therefore, it is important to understand and measure how this plume of ions is being controlled. There are two important diagnostic tests for the
-            thrusters to pass, the Faraday Probe Diagnostics and the Retards Potential Analyzer Diagnostics.
+            thrusters to pass, the Faraday Probe Diagnostics and the Retarding Potential Analyzer Diagnostics.
           </p>
           <div class="container">
             <div class="row">
@@ -103,8 +103,9 @@
           <hr class=""/>
           <p class="h2">Retarding Potential Analyzer</p>
           <p class="fs-5">
-            Since the electronic thrusters rely on the electrical energy released by Ions, it is important to know how the plume of ions is shaped. The energy measured within
-            this test shows how efficient the thruster will be when it is in use.
+            It is important to know how the plume of ions is shaped, because the electronic thrusters rely on the electrical energy released by Ions. The energy measured within
+            this test shows how efficient the thruster will be when it is in use. Click below to learn more about how the Retarding Potential Analyzer (RPA) works and its importance
+            to the testing of Hall Thrusters.
           </p>
           <div class="row justify-content-end">
             <div class="col-4">
