Layout Complete (1st Draft)
The initial layout is complete. I removed the sample text, but included one image for now. This is just the first draft, so it can still change.

--- a/views/retarding_analyzer.html
+++ b/views/retarding_analyzer.html
@@ -45,7 +45,21 @@
     <div class="col-lg-8 mx-auto p-3 py-md-4">
       <p class="h2">Retarding Probe Analyzers</p>
       <p class="lead">
-        Sed at blandit eros. Donec erat diam, commodo et dui a, placerat consectetur lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec rhoncus volutpat convallis. Pellentesque molestie posuere lorem id tempus. In vel lorem sollicitudin, venenatis metus eu, tempus urna. Phasellus scelerisque porta mauris, nec gravida erat volutpat quis. Morbi bibendum sit amet libero vitae posuere. Aenean justo enim, molestie id ex et, consequat gravida lorem. Maecenas placerat neque vel consectetur ullamcorper. Proin a lectus id dui rhoncus ullamcorper eu semper quam. Vivamus ligula nisi, porttitor nec lectus vel, tincidunt efficitur lectus. Aenean lorem lectus, consequat eu mattis ac, tempor vitae lectus. Etiam arcu enim, placerat sed hendrerit et, aliquam eget nunc. Vivamus a quam a metus maximus lobortis. Aenean laoreet augue sit amet elementum fringilla.
+
+      </p>
+    </div>
+    <div>
+        <center>
+          <figure>
+            <img src="../img/rpa/RPA.png"/>
+            <figcaption>example side-view of the retarding probe analyzer</figcaption>
+          </figure>
+        </center>
+      </div>
+    <div class="col-lg-8 mx-auto p-3 py-md-4">
+      <p class="h2">How it works</p>
+      <p class="lead">
+        
       </p>
     </div>
 
