add info to homepage and fix style

--- a/views/home.html
+++ b/views/home.html
@@ -88,12 +88,10 @@
 
           <hr class=""/>
           <p class="h2">Faraday Probes</p>
-          <p class="lead">
-            A faraday probe is a small cylindrical shaped object that can be used to determine the local ion charge of electric propulsion plumes.
+          <p class="fs-5">
+            A faraday probe is a small cylindrical shaped object that can be used to determine the local ion charge of electric propulsion plumes. 
+            With this information one can determine the divergence angle of the thruster plume.
           </p>
-          <div class="rocket">
-            <img src="../img/rocket.svg">
-          </div>
           <div class="row justify-content-end">
             <div class="col-4">
               <a href="./faraday_probe.html" class="btn btn-light learning-btn">Continue Learning
