--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -36,6 +36,7 @@
         </ul>
       </div>
     </div>
+  </nav>
     <div class="col-lg-8 mx-auto p-3 py-md-4">
       <p class="h2">Faraday Probe</p>
       <p class="lead">
