Main and Footer Class fix
Fixes

--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -36,6 +36,13 @@
         </ul>
       </div>
     </div>
+  </nav>
+
+  <main class="container">
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center main-top">
+      <p class="display-3 fw-bold text-light">Hall Thruster Diagnostics</p>
+      <p class="fs-4 text-light">Perfecting the Thrusters for Psyche </p>
+    </div>
     <div class="col-lg-8 mx-auto p-3 py-md-4">
       <p class="h2">Faraday Probe</p>
       <p class="lead">
@@ -81,6 +88,18 @@
         <li>Space plasma experiments</li>
         <li>Dense plasma focus experiments</li>
         <li>Laser-produced plasma</li>
+      </ul>
+    </div>
+  </main>
+
+  <footer class="container-xl">
+    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-muted">Placeholder</p>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted">More on Psyche</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">References</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Our Team</a></li>
       </ul>
     </div>
   </footer>
