add "click me" info

--- a/views/home.html
+++ b/views/home.html
@@ -90,7 +90,7 @@
           <p class="h2">Faraday Probes</p>
           <p class="fs-5">
             A faraday probe is a small cylindrical shaped object that can be used to determine the local ion charge of electric propulsion plumes. 
-            With this information one can determine the divergence angle of the thruster plume.
+            With this information one can determine the divergence angle of the thruster plume. Click below to learn more about how the Faraday Probe works and its importance to the testing of Hall Thrusters.
           </p>
           <div class="row justify-content-end">
             <div class="col-4">
