make images respond to mobile

--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -52,7 +52,7 @@
     <div>
       <center>
         <figure>
-          <img src="../img/faraday_probe/Faraday_Probe.png"/>
+          <img class="resizing-image" src="../img/faraday_probe/Faraday_Probe.png"/>
           <figcaption>Faraday Probe. Coin for scale.</figcaption>
         </figure>
       </center>
@@ -64,7 +64,7 @@
       </p>
       <center>
         <figure>
-          <img src="../img/faraday_probe/Probe_Diagram.png"/>
+          <img class="resizing-image" src="../img/faraday_probe/Probe_Diagram.png"/>
           <figcaption>Diagram of the Faraday Probe components<//figcaption>
         </figure>
       </center>
