make image respond to mobile

--- a/views/retarding_analyzer.html
+++ b/views/retarding_analyzer.html
@@ -51,7 +51,7 @@
     <div>
         <center>
           <figure>
-            <img src="../img/rpa/RPA.png"/>
+            <img class="resizing-image" src="../img/rpa/RPA.png"/>
             <figcaption>example side-view of the retarding probe analyzer</figcaption>
           </figure>
         </center>
