--- a/views/retarding_analyzer.html
+++ b/views/retarding_analyzer.html
@@ -65,7 +65,7 @@
 
     <footer class="container-xl">
       <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-muted">Placeholder</p>
+        <p class="col-md-4 mb-0 text-muted"></p>
 
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted">More on Psyche</a></li>
