--- a/views/retarding_analyzer.html
+++ b/views/retarding_analyzer.html
@@ -43,7 +43,7 @@
       <p class="fs-4 text-light">Perfecting the Thrusters for Psyche </p>
     </div>
     <div class="col-lg-8 mx-auto p-3 py-md-4">
-      <p class="h2">Retarding Probe Analyzers</p>
+      <p class="h2">Retarding Potential Analyzers</p>
       <p class="lead">
 
       </p>
