--- a/views/retarding_analyzer.html
+++ b/views/retarding_analyzer.html
@@ -9,6 +9,7 @@
   <script src="../lib/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="icon" type="image/svg+xml" href="../img/logo/Psyche_Icon_BW-SVG.svg">
   <script src="../js/script.js"></script>
 </head>
 
