--- a/views/faraday_probe.html
+++ b/views/faraday_probe.html
@@ -60,7 +60,7 @@
     <div class="col-lg-8 mx-auto p-3 py-md-4">
       <p class="h3">How It Works</p>
       <p class="lead">
-        The collector and guard are biased negatively and swept in an arc through the plume. The collector current is measured as a function of position (higher current = more ions)
+        The probe is swept in an arc throughout the plume created by the Hall Thrusters. Ions are detected at the collector, then the ion current collected is measured as the probe is travelling. A high ion current at a certain position in the plume means that there are many ions being received over a given period of time in that location.
       </p>
       <center>
         <figure>
