make urls work on server

--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white border-bottom" aria-label="TopNavbar">
     <div class="container-xl">
       <a class="navbar-brand" href="/index.html">
-        <img src="../img/logo/Psyche_Icon_BW-SVG.svg" alt="" width="45" height="45" class="d-inline-block"> Hall Thruster Diagnostics
+        <img src="/img/logo/Psyche_Icon_BW-SVG.svg" alt="" width="45" height="45" class="d-inline-block"> Hall Thruster Diagnostics
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTop" aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
