--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white border-bottom" aria-label="TopNavbar">
     <div class="container-xl">
-      <a class="navbar-brand" href="/index.html">
+      <a class="navbar-brand" href="/">
         <img src="/img/logo/Psyche_Icon_BW-SVG.svg" alt="" width="45" height="45" class="d-inline-block"> Hall Thruster Diagnostics
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTop" aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse " id="navbarTop">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbar-list">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Overview</a>
+            <a class="nav-link" href="/">Overview</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/faraday_probe.html">Faraday Probes</a>
