Disclaimer in Footer

--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -17,6 +17,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/retarding_analyzer.html">RPA Diagnostics</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/references.html">References</a>
+          </li>
         </ul>
       </div>
     </div>
