--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -1,10 +1,26 @@
 <footer class="container-xl">
-    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-muted"></p>
-
-        <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted">More on Psyche</a></li>
-            <li class="nav-item"><a href="/references.html" class="nav-link px-2 text-muted">References</a></li>
-        </ul>
+    <div class="d-flex flex-wrap justify-content-between align-items-center py-2 border-top">
+      <div class="col-lg-9 mx-auto py-md-2">
+        <p class="h5 text-center">Disclaimer</p>
+        <p class="fw-light text-center">
+          This work was created in partial fulfillment of Arizona State University Capstone Courses “CSE 485, CSE 486″.
+          The work is a result of the Psyche Student Collaborations component of NASA’s Psyche Mission (<a href="https://psyche.asu.edu">https://psyche.asu.edu</a>).
+          “Psyche: A Journey to a Metal World” [Contract number NNM16AA09C] is part of the NASA Discovery Program mission to solar system targets.
+          Trade names and trademarks of ASU and NASA are used in this work for identification only.
+          Their usage does not constitute an official endorsement, either expressed or implied,
+          by Arizona State University or National Aeronautics and Space Administration.
+          The content is solely the responsibility of the authors and does not necessarily represent the official views of ASU or NASA.
+        </p>
+      </div>
     </div>
+
+    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
+      <p class="col-md-4 mb-0 text-muted"></p>
+
+      <ul class="nav col-md-4 justify-content-end">
+          <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted">More on Psyche</a></li>
+          <li class="nav-item"><a href="/references.html" class="nav-link px-2 text-muted">References</a></li>
+      </ul>
+    </div>
+
 </footer>
