--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -18,7 +18,7 @@
       <p class="col-md-4 mb-0 text-muted"></p>
 
       <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted">More on Psyche</a></li>
+          <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted" target="_blank">More on Psyche</a></li>
           <li class="nav-item"><a href="/references.html" class="nav-link px-2 text-muted">References</a></li>
       </ul>
     </div>
